--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 .env
 /.firebase
 .firebaserc
+/.firebaserc
 
 # dependencies
 /node_modules
@@ -14,13 +15,6 @@
 
 # production
 /build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
